--- a/assets/Languages/ms_MY.xlf
+++ b/assets/Languages/ms_MY.xlf
@@ -2481,7 +2481,7 @@
 						<source>Activates or deactivates the constant speed device</source>
 						<target>Mengaktifkan atau menyahaktifkan peranti kelajuan malar</target>
 					</trans-unit>
-					<trans-unit id="play_micsounds">
+					<trans-unit id="play_mic_sounds">
 						<source>Activates or deactivates the system microphone soundsource</source>
 					</trans-unit>
 					<trans-unit id="sanders">
