--- a/assets/Languages/pl-PL.xlf
+++ b/assets/Languages/pl-PL.xlf
@@ -2485,7 +2485,7 @@
 						<source>Activates or deactivates the constant speed device</source>
 						<target>Aktywuje albo dezaktywuje stałą prędkość</target>
 					</trans-unit>
-					<trans-unit id="play_micsounds">
+					<trans-unit id="play_mic_sounds">
 						<source>Activates or deactivates the system microphone soundsource</source>
 					</trans-unit>
 					<trans-unit id="sanders">
