--- a/assets/Languages/zh-HK.xlf
+++ b/assets/Languages/zh-HK.xlf
@@ -2502,7 +2502,7 @@
 						<source>Activates or deactivates the constant speed device</source>
 						<target>啟動或關閉定速設備</target>
 					</trans-unit>
-					<trans-unit id="play_micsounds">
+					<trans-unit id="play_mic_sounds">
 						<source>Activates or deactivates the system microphone soundsource</source>
 						<target>啟動或關閉系統麥克風聲源</target>
 					</trans-unit>
