--- a/assets/Languages/fi-FI.xlf
+++ b/assets/Languages/fi-FI.xlf
@@ -2464,7 +2464,7 @@
 						<source>Activates or deactivates the constant speed device</source>
 						<target>Aktivoi tai poistaa vakionopeuslaitteen toiminnan</target>
 					</trans-unit>
-					<trans-unit id="play_micsounds">
+					<trans-unit id="play_mic_sounds">
 						<source>Activates or deactivates the system microphone soundsource</source>
 						<target>Activates or deactivates the system microphone soundsource</target>
 					</trans-unit>
