--- a/assets/Languages/nb_NO.xlf
+++ b/assets/Languages/nb_NO.xlf
@@ -2417,7 +2417,7 @@
 				    <source>Activates or deactivates the constant speed device</source>
 				    <target>Aktiverer eller deaktiverer kruskontroll</target>
 				  </trans-unit>
-				  <trans-unit id="play_micsounds">
+				  <trans-unit id="play_mic_sounds">
 						<source>Activates or deactivates the system microphone soundsource</source>
 						<target>Activates or deactivates the system microphone soundsource</target>
 					</trans-unit>
