--- a/assets/Languages/pt-PT.xlf
+++ b/assets/Languages/pt-PT.xlf
@@ -18,7 +18,7 @@
 				</trans-unit>
 				<trans-unit id="last_updated">
 					<source>2019-06-04</source>
-					<target>2020-04-27</target>
+					<target state="translated">2023-08-27</target>
 				</trans-unit>
 			</group>
 			<group id="openbve">
@@ -31,69 +31,69 @@
 				<group id="about">
 					<trans-unit id="title">
 						<source>About</source>
-						<target>About</target>
+						<target state="translated">Acerca de</target>
 					</trans-unit>
 					<trans-unit id="description">
 						<source>OpenBVE is a free and open-source multi-platform train simulator, featuring support for 2D and 3D cabs and scenery.\r\n\r\nThis program was initially developed by Michelle, and is released into the public domain where legally possible.</source>
-						<target>OpenBVE is a free and open-source multi-platform train simulator, featuring support for 2D and 3D cabs and scenery.\r\n\r\nThis program was initially developed by Michelle, and is released into the public domain where legally possible.</target>
+						<target state="translated">O OpenBVE é um simulador grátis de código aberto e multiplataforma de condução de comboios, que incorpora suporte para cenários e cabinas 2D e 3D.\r\n\r\nEste programa foi inicialmente desenvolvido por Michelle e está disponível ao público onde legalmente possível.</target>
 					</trans-unit>
 					<trans-unit id="open_source_licenses">
 						<source>Open Source Licenses</source>
-						<target>Open Source Licenses</target>
+						<target state="translated">Licença de Código Aberto</target>
 					</trans-unit>
 					<trans-unit id="open_source_licenses_header">
 						<source>OpenBVE makes use of several open-source libraries, whose licenses are reproduced below:</source>
-						<target>OpenBVE makes use of several open-source libraries, whose licenses are reproduced below:</target>
+						<target state="translated">O OpenBVE utiliza várias bibliotecas de código aberto, cujas licenças são reproduzidas abaixo:</target>
 					</trans-unit>
 					<trans-unit id="close">
 						<source>Close</source>
-						<target>Close</target>
+						<target state="translated">Fechar</target>
 					</trans-unit>
 				</group>
 				<group id="bug_report">
 					<trans-unit id="title">
 						<source>Report Problem</source>
-						<target>Report Problem</target>
+						<target state="translated">Reportar Problema</target>
 					</trans-unit>
 					<trans-unit id="description">
 						<source>This function will create a zip archive on your Desktop, containing the previous Simulation log and Crash log (If any), along with a text file containing the brief description of the problem entered below.\r\n\r\nPlease post this on the discussion board, or create a new issue on Github.</source>
-						<target>This function will create a zip archive on your Desktop, containing the previous Simulation log and Crash log (If any), along with a text file containing the brief description of the problem entered below.\r\n\r\nPlease post this on the discussion board, or create a new issue on Github.</target>
+						<target state="translated">Esta função vai criar um arquivo ZIP na sua Área de Trabalho, contendo os anteriores relatórios da Simulação e das Avarias (se existentes), juntamente com um ficheiro de texto contendo uma breve descrição do problema indicado abaixo.\r\n\r\nPor favor publique isto na área de discussão, ou crie uma nova entrada no Github.</target>
 					</trans-unit>
 					<trans-unit id="view_log_button">
 						<source>View...</source>
-						<target>View...</target>
+						<target state="translated">Ver...</target>
 					</trans-unit>
 					<trans-unit id="view_log">
 						<source>View the previous log:</source>
-						<target>View the previous log:</target>
+						<target state="translated">Ver o registo anterior:</target>
 					</trans-unit>
 					<trans-unit id="view_crash_log">
 						<source>View the previous crash log:</source>
-						<target>View the previous crash log:</target>
+						<target state="translated">Ver o registo anterior de avaria:</target>
 					</trans-unit>
 					<trans-unit id="enter_description">
 						<source>Please enter a brief description of the problem:</source>
-						<target>Please enter a brief description of the problem:</target>
+						<target state="translated">Por favor descreva brevemente o problema:</target>
 					</trans-unit>
 					<trans-unit id="no_log">
 						<source>No simulation logs were found.</source>
-						<target>No simulation logs were found.</target>
+						<target state="translated">Não foram encontrados registos da simulação.</target>
 					</trans-unit>
 					<trans-unit id="no_crash_log">
 						<source>No crash logs were found.</source>
-						<target>No crash logs were found.</target>
+						<target state="translated">Não foram encontrados registos de avarias.</target>
 					</trans-unit>
 					<trans-unit id="save">
 						<source>Save Bug Report</source>
-						<target>Save Bug Report</target>
+						<target state="translated">Guardar Relatório do Erro</target>
 					</trans-unit>
 					<trans-unit id="saved">
 						<source>The report has been saved as "[filename]" on your desktop. \r\n\r\nYou may now submit a bug report to the discussion board, or open an issue on GitHub with this zip file attached.</source>
-						<target>The report has been saved as "[filename]" on your desktop. \r\n\r\nYou may now submit a bug report to the discussion board, or open an issue on GitHub with this zip file attached.</target>
+						<target state="translated">O relatório foi guardado como "[filename]" na sua Área de Trabalho. \r\n\r\nAgora pode submeter um relatório de erro na área de discussão, ou colocando uma questão no GitHub com este ficheiro ZIP anexado.</target>
 					</trans-unit>
 					<trans-unit id="save_failed">
 						<source>Cannot create bug report! \r\n\r\nYou may access the Log and Crash Log directly by clicking the "View..." button, then submit these logs to the discussion board or open an issue on GitHub.</source>
-						<target>Cannot create bug report! \r\n\r\nYou may access the Log and Crash Log directly by clicking the "View..." button, then submit these logs to the discussion board or open an issue on GitHub.</target>
+						<target state="translated">Impossível criar o relatório de erro! \r\n\r\nPode aceder ao Registo e Registo de Avaria directamente clicando no botão "Ver..." , submetendo depois estes registos à área de discussão ou colocando uma questão no GitHub.</target>
 					</trans-unit>
 				</group>
 				<group id="panel">
@@ -139,7 +139,7 @@
 					</trans-unit>
 					<trans-unit id="updates_daily">
 						<source>The most recent nightly build from [date] is available for download.</source>
-						<target>The most recent nightly build from [date] is available for download.</target>
+						<target state="translated">A versão nocturna mais recente de [date] está disponível para baixar.</target>
 					</trans-unit>
 					<trans-unit id="close">
 						<source>Close</source>
@@ -291,6 +291,7 @@
 					</trans-unit>
 					<trans-unit id="error_busy_thread">
 						<source>The package worker thread is currently busy. Please wait a moment and try again.</source>
+						<target state="translated">Actualmente ocupado a trabalhar no pacote. Por favor aguarde um momento e tente de novo.</target>
 					</trans-unit>
 				</group>
 				<group id="start">
@@ -732,7 +733,7 @@
 					</trans-unit>
 					<trans-unit id="creation_dependancies_skip_if_none">
 						<source>If your package does not rely on other dependencies, you may continue by clicking the "Create" button.</source>
-						<target>If your package does not rely on other dependencies, you may continue by clicking the "Create" button.</target>
+						<target state="translated">Se o seu pacote não assenta noutras dependências pode prosseguir clicando no botão "Criar".</target>
 					</trans-unit>
 					<trans-unit id="creation_dependancies_nextstep">
 						<source>Package details and dependancies may be assigned in the following steps.</source>
@@ -1374,7 +1375,7 @@
 					</trans-unit>
 					<trans-unit id="display_fullscreen_bits">
 						<source>Bits per pixel:</source>
-						<target>Bits por pixel:</target>
+						<target state="translated">Bites por pixel:</target>
 					</trans-unit>
 					<trans-unit id="quality">
 						<source>Quality</source>
@@ -1722,6 +1723,7 @@
 					</trans-unit>
 					<trans-unit id="object_parser">
 						<source>Object Parser</source>
+						<target state="translated">Analisador de Objectos</target>
 					</trans-unit>
 					<trans-unit id="xobject_parser">
 						<source>X Object Parser</source>
@@ -2281,7 +2283,7 @@
 					</trans-unit>
 					<trans-unit id="eb">
 						<source>EB</source>
-						<target>HOMEM MORTO</target>
+						<target state="translated">HOMEM-MORTO</target>
 					</trans-unit>
 					<trans-unit id="constspeed">
 						<source>CONST SPEED</source>
@@ -2385,11 +2387,11 @@
 					</trans-unit>
 					<trans-unit id="locobrake_decrease">
 						<source>N/A</source>
-						<target>N/A</target>
+						<target state="translated">Indisponível</target>
 					</trans-unit>
 					<trans-unit id="locobrake_increase">
 						<source>N/A</source>
-						<target>N/A</target>
+						<target state="translated">Indisponível</target>
 					</trans-unit>
 					<trans-unit id="brake_halfaxis">
 						<source>Controls brake for trains with two handles on half of a joystick axis</source>
