--- a/assets/Languages/nb_NO.xlf
+++ b/assets/Languages/nb_NO.xlf
@@ -1045,6 +1045,9 @@
 					  <source>Export...</source>
 					  <target>Eksporter...</target>
 					</trans-unit>
+					<trans-unit id="reset_question">
+						<source>Reset the current control configuration to the defaults?</source>
+					</trans-unit>
 					<trans-unit id="reset">
 					  <source>Reset to defaults</source>
 					  <target>Tilbakestill</target>
