--- a/assets/Languages/ca-ES.xlf
+++ b/assets/Languages/ca-ES.xlf
@@ -2228,7 +2228,7 @@
 						<target>Palanca de control</target>
 					</trans-unit>
 					<trans-unit id="joystick_notavailable">
-						<source>N/A</source>
+						<source>Joystick (Not currently connected)</source>
 						<target>N/D</target>
 					</trans-unit>
 					<trans-unit id="joystickdirection_positive">
@@ -2395,12 +2395,10 @@
 						<target>Incrementa el fre una posició en els trens amb dues manetes.</target>
 					</trans-unit>
 					<trans-unit id="locobrake_decrease">
-						<source>N/A</source>
-						<target>N/D</target>
+						<source>Decreases the locomotive brake by one notch</source>
 					</trans-unit>
 					<trans-unit id="locobrake_increase">
-						<source>N/A</source>
-						<target>N/D</target>
+						<source>Increases the locomotive brake by one notch</source>
 					</trans-unit>
 					<trans-unit id="brake_halfaxis">
 						<source>Controls brake for trains with two handles on half of a joystick axis</source>
@@ -2563,19 +2561,19 @@
 						<target>Funció L del sistema de seguretat.</target>
 					</trans-unit>
 					<trans-unit id="security_m">
-						<source>N/A</source>
+						<source>The M function of the security system</source>
 						<target>Funció M del sistema de seguretat.</target>
 					</trans-unit>
 					<trans-unit id="security_n">
-						<source>N/A</source>
+						<source>The N function of the security system</source>
 						<target>Funció N del sistema de seguretat.</target>
 					</trans-unit>
 					<trans-unit id="security_o">
-						<source>N/A</source>
+						<source>The O function of the security system</source>
 						<target>Funció O del sistema de seguretat.</target>
 					</trans-unit>
 					<trans-unit id="security_p">
-						<source>N/A</source>
+						<source>The P function of the security system</source>
 						<target>Funció P del sistema de seguretat.</target>
 					</trans-unit>
 					<trans-unit id="camera_interior">
