--- a/assets/Languages/en-US.xlf
+++ b/assets/Languages/en-US.xlf
@@ -3549,6 +3549,9 @@ Please follow the following instructions:
 							<trans-unit id="rear">
 								<source>RearAxle</source>
 							</trans-unit>
+							<trans-unit id="mustbe_less">
+								<source>RearAxle must be less than FrontAxle.</source>
+							</trans-unit>
 						</group>
 						<trans-unit id="front_bogie">
 							<source>FrontBogie</source>
@@ -4533,6 +4536,15 @@ Please follow the following instructions:
 					</trans-unit>
 					<trans-unit id="invalid_color">
 						<source>invalid_color</source>
+					</trans-unit>
+					<trans-unit id="number_exist">
+						<source>The specified number is already set.</source>
+					</trans-unit>
+					<trans-unit id="mustbe_greater_than">
+						<source>Max must be greater than or equal to Min.</source>
+					</trans-unit>
+					<trans-unit id="mustbe_less_than">
+						<source>Min must be less than the Max.</source>
 					</trans-unit>
 				</group>
 			</group>
