--- a/assets/Languages/ja-JP.xlf
+++ b/assets/Languages/ja-JP.xlf
@@ -4370,6 +4370,10 @@
 							<trans-unit id="rear">
 								<source>RearAxle</source>
 							</trans-unit>
+							<trans-unit id="axle_mustbe_less">
+								<source>RearAxle must be less than FrontAxle.</source>
+								<target>後車軸は前車軸未満でなければなりません。</target>
+							</trans-unit>							
 						</group>
 						<trans-unit id="front_bogie">
 							<source>FrontBogie</source>
@@ -5506,6 +5510,18 @@
 					<trans-unit id="invalid_color">
 						<source>invalid_color</source>
 						<target>{0}は16進数色を表していません。</target>
+					</trans-unit>
+					<trans-unit id="number_exist">
+						<source>The specified number is already set.</source>
+						<target>指定された番号は既に追加されています。</target>
+					</trans-unit>
+					<trans-unit id="mustbe_greater_than">
+						<source>Max must be greater than or equal to the Min.</source>
+						<target>MaxはMin以上でなければなりません。</target>
+					</trans-unit>
+					<trans-unit id="mustbe_less_than">
+						<source>Min must be less than the Max.</source>
+						<target>MinはMax未満でなければなりません。</target>
 					</trans-unit>
 				</group>
 			</group>
